crates/dioform/tests/derive_contract/fail/field_group_generic.rs
#![allow(dead_code)]

use dioform::FieldGroup;

#[derive(FieldGroup)]
struct GenericGroup<T> {
    value: T,
}

fn main() {}
